stylesheets/soul.css
/***************************/
/********* GENERAL **********/
/***************************/

:root {
  --main-white: #f0f0f0;
  --main-red: #be3144;
  --main-blue: #45567d;
  --main-gray: #c5c5c5;
  --dark-gray: #181818;
  --main-trim: purple;
  --main-comp: rgb(20, 20, 20);
}

html {
  box-sizing: border-box;
  font-size: calc(16px + 0.2 * ((100vw - 320px) / 680));
}

* {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
}

body {
  background-color: black;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
  font-family: "Jost", sans-serif;
  color: white;
}

p {
  margin: 0;
  font-family: "Open Sans", sans-serif;
  color: white;
}

section {
  padding: 64px 13%;
  width: 100%;
}

.section-header {
  text-align: center;
  margin-bottom: 48px;
  letter-spacing: 0.04em;
  text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
}

.btn-soul-light-lg {
  border: none;
  background: white;
  color: black;
  border-radius: 4px;
  padding: 8px 24px;
}

.btn-soul-light-lg:hover {
  background: lightgrey;
}

.btn-soul-dark {
  border: none;
  border-radius: 4px;
  background: black;
  color: white;
  font-size: 0.75rem;
  padding: 4px 12px;
  transition: all 0.05s ease-in-out;
}

.btn-soul-dark:hover {
  background: lightgrey;
  color: black;
}

.btn-soul-dark-lg {
  border: none;
  border-radius: 4px;
  background: black;
  color: white;
  padding: 8px 24px;
  transition: all 0.05s ease-in-out;
}

.btn-soul-dark-lg:hover {
  background: lightgrey;
  color: black;
}

.inline-block {
  display: inline-block;
}

/***************************/
/********* HEADER **********/
/***************************/

header {
  background-color: white;
  padding: 32px 15% 24px 15%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

header img {
  width: 100%;
  align-self: center;
  margin-bottom: 16px;
}

/***************************/
/********** NAV ************/
/***************************/

nav {
  width: 90%;
}

nav ul {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin: 0;
  list-style: none;
}

nav a {
  font-size: 1rem;
  color: black;
  transition: all 0.1s ease-in-out;
}

nav a:hover {
  text-decoration: none;
  transform: scale(1.1);
  color: grey;
}

/***************************/
/********* BANNER **********/
/***************************/

.banner {
  position: relative;
}

.banner-gradient {
  width: 100%;
  position: absolute;
  height: 100%;
  background: linear-gradient(
      45deg,
      rgba(68, 30, 71, 0.85),
      rgba(71, 26, 75, 0.7)
    ),
    linear-gradient(
      45deg,
      rgba(0, 0, 0, 0.35),
      rgba(0, 0, 0, 0.2)
    );
  z-index: 1;
}

.banner-text {
  position: absolute;
  z-index: 2;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
}

.banner-text h2 {
  font-size: 4rem;
  margin: 0 auto;
}

.carousel-inner {
  width: 100%;
  height: 50vh;
  max-height: 415px;
}

.carousel-item {
  height: 100%;
  width: 100%;
}

.carousel-image {
  height: 100%;
  width: 100%;
  object-fit: cover;
}

/***************************/
/********* ABOUT ***********/
/***************************/

#about {
  display: flex;
  flex-direction: column;
  align-items: center;
}

#about p {
  text-indent: 1em;
}

#about .band-members {
  margin: 2em 0;
}

#about .band-member:not(:last-child) {
  margin-bottom: 1em;
}

#about .band-member-name {
  margin: 0.25em 0;
}

#about button {
  margin-top: 2.5em;
}

/***************************/
/******** CALENDAR *********/
/***************************/

#calendar {
  background-image: linear-gradient(
      45deg,
      rgba(68, 30, 71, 0.6),
      rgba(71, 26, 75, 0.8)
    ),
    url("https://images.unsplash.com/photo-1535587566541-97121a128dc5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80");
  background-size: cover;
}

.calendar-shows {
  margin: 0;
  list-style: none;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.calendar-shows li:not(:last-child) {
  margin-bottom: 16px;
}

.calendar-shows li {
  width: 90%;
  background: white;
  border-radius: 4px;
  padding: 12px 24px;
  display: grid;
  grid-template-columns: 2fr 3fr 1fr;
  grid-template-areas: "schedule venue location";
  grid-gap: 16px;
}

.calendar-shows li div {
  display: flex;
  align-items: center;
}

.show-schedule {
  flex-direction: column;
  justify-content: center;
  grid-area: schedule;
}

.show-schedule h6 {
  color: black;
  margin-right: auto;
  font-size: 0.9rem;
}

.show-schedule p {
  color: black;
  margin-right: auto;
  font-size: 0.8rem;
}

.show-venue {
  flex-basis: 40%;
  font-size: 1.4rem;
  grid-area: venue;
}

.show-venue h6 {
  color: black;
}

.show-location {
  display: flex;
  justify-content: center;
  align-items: center;
  grid-area: location;
}

/***************************/
/********** MEDIA **********/
/***************************/

#media {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.videos {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 48px;
  margin-bottom: 56px;
  width: 100%;
}

.iframe-container {
  padding-top: 56.25%;
  position: relative;
  border: 8px solid white;
}

.iframe-container iframe {
  border: 0;
  left: 0;
  position: absolute;
  top: 0;
}

/***************************/
/********* CONTACT *********/
/***************************/

#contact {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-image: linear-gradient(
      45deg,
      rgba(68, 30, 71, 0.6),
      rgba(71, 26, 75, 0.8)
    ),
    url("https://images.unsplash.com/photo-1555201441-7b166836415d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1502&q=80");
  background-size: cover;
  background-position: center;
}

.contact-details {
  margin-bottom: 24px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.contact-details h5 {
  margin-top: 12px;
}

.contact-cta {
  margin-bottom: 2em;
}

.social-icons {
  display: flex;
}

.social-icons button {
  height: 60px;
  width: 60px;
  border: none;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0 6px;
}

.social-icons i {
  font-size: 1.5rem;
  color: white;
}

.social-icons button.facebook {
  background: #3b5998;
}

.social-icons button.youtube {
  background: #bb0000;
}

.social-icons button.instagram {
  background: #125688;
}

.social-icons button:hover {
  background: darkgrey;
}

.social-icons a:hover {
  text-decoration: none;
}

/***************************/
/********* FOOTER **********/
/***************************/

footer {
  background: white;
  display: flex;
  justify-content: center;
  padding: 20px 0;
}

footer p {
  font-size: 0.7rem;
  color: black;
}

/***************************/
/***************************/
/******* BREAKPOINTS *******/
/***************************/
/***************************/

@media (max-width: 1024px) {
  section {
    padding: 64px 10%;
  }
}

@media (max-width: 800px) {
  section {
    padding: 64px 6%;
  }

  .videos {
    grid-template-columns: 1fr;
    grid-gap: 64px;
  }
}

@media (max-width: 650px) {
  nav ul{
    align-items: center;
    flex-direction: column;
  }

  .banner-text h2 {
    font-size: 2.5rem;
  }

  .calendar-shows li {
    grid-template-columns: 1fr;
    grid-template-areas: 
    "venue"
    "schedule"
    "location";
  }

  .calendar-shows li div {
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .show-venue {
    text-align: center;
  }

  .show-schedule h6 {
    margin-right: 0;
  }

  .show-schedule p {
    margin-right: 0;
  }
}

